--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="snackbar_empty_username">Username is require.</string>
     <string name="snackbar_invalid_username">Username is not valid.</string>
     <string name="snackbar_invalid_email">Email is not valid.</string>
+    <string name="img_content_description">Settings</string>
 </resources>
