--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,32 @@
 <resources>
     <string name="app_name">Rasad</string>
+
     <string name="edt_hint_mobile_number">Mobile Number</string>
     <string name="edt_hint_username">Username</string>
     <string name="edt_hint_email">Email</string>
+
     <string name="btn_txt_enter">Enter</string>
     <string name="btn_txt_send">Send</string>
     <string name="btn_txt_register">Register</string>
+
     <string name="txt_enter_desc">* Type your mobile number to enter the app.\n  (Pattern: 09123456789)</string>
     <string name="txt_send_otp_desc">* Enter the sent OTP.</string>
     <string name="txt_register_desc">* Enter username and email.\n* Username is require and must be unique.\n* Email is optional.</string>
     <string name="txt_profile">Edit Profile</string>
+    <string name="txt_settings_toolbar_title">Settings</string>
+    <string name="txt_profile_toolbar_title">Profile</string>
+    <string name="txt_account_title">Account</string>
+    <string name="txt_no_email">No email</string>
+    <string name="txt_email_title">Email</string>
+    <string name="txt_username_title">Username</string>
+    <string name="txt_mobile_title">Mobile</string>
+
     <string name="snackbar_incorrect_mobile_number">The mobile number is not correct.</string>
     <string name="snackbar_incorrect_otp">The code is not correct.</string>
     <string name="snackbar_empty_mobile_number">Please insert your mobile number.</string>
     <string name="snackbar_empty_username">Username is require.</string>
     <string name="snackbar_invalid_username">Username is not valid.</string>
     <string name="snackbar_invalid_email">Email is not valid.</string>
+
     <string name="img_content_description">Settings</string>
 </resources>
