--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,13 +10,15 @@
     <string name="btn_txt_register">Register</string>
     <string name="btn_txt_update">Update %1$s</string>
 
+    <string name="txt_settings_toolbar_title">Settings</string>
+    <string name="txt_profile_toolbar_title">Profile</string>
+    <string name="txt_otp_toolbar_title">Authentication</string>
+    <string name="txt_register_toolbar_title">Register</string>
+
     <string name="txt_enter_desc">* Type your mobile number to enter the app.\n  (Pattern: 09123456789)</string>
     <string name="txt_send_otp_desc">* Enter the sent OTP.</string>
     <string name="txt_register_desc">* Enter username and email.\n* Username is require and must be unique.\n* Email is optional.</string>
     <string name="txt_profile">Edit Profile</string>
-    <string name="txt_settings_toolbar_title">Settings</string>
-    <string name="txt_profile_toolbar_title">Profile</string>
-    <string name="txt_otp_toolbar_title">Authentication</string>
     <string name="txt_account_title">Account</string>
     <string name="txt_no_email">No email</string>
     <string name="txt_email_title">Email</string>
