Adding toolbar in LoginFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="btn_txt_register">Register</string>
     <string name="btn_txt_update">Update %1$s</string>
 
+    <string name="txt_login_toolbar_title">Login</string>
     <string name="txt_settings_toolbar_title">Settings</string>
     <string name="txt_profile_toolbar_title">Profile</string>
     <string name="txt_otp_toolbar_title">Authentication</string>
