--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="edt_hint_mobile_number">Mobile Number</string>
     <string name="edt_hint_username">Username</string>
     <string name="edt_hint_email">Email</string>
+    <string name="edt_hint_target">Target username</string>
+    <string name="edt_hint_name">Target name (optional)</string>
 
     <string name="btn_txt_enter">Enter</string>
     <string name="btn_txt_send">Send</string>
@@ -13,14 +15,16 @@
     <string name="btn_txt_track_other">Track other</string>
     <string name="btn_txt_positive_dialog">OK</string>
     <string name="btn_txt_negative_dialog">Cancel</string>
-    <string name="btn_send_request">Send Request</string>
+    <string name="btn_send_request">Request</string>
+    <string name="btn_new_target">New target</string>
 
     <string name="txt_login_toolbar_title">Login</string>
     <string name="txt_settings_toolbar_title">Settings</string>
     <string name="txt_profile_toolbar_title">Profile</string>
     <string name="txt_otp_toolbar_title">Authentication</string>
     <string name="txt_register_toolbar_title">Register</string>
-    <string name="txt_track_user_dialog_msg">Type the username you want to track.</string>
+    <string name="txt_track_user_bottom_sheet_new_target_msg">Type the username you want to track.</string>
+    <string name="txt_track_user_bottom_sheet_saved_targets_msg">Choose one or more of the targets below or add a new target.</string>
 
     <string name="txt_enter_desc">* Type your mobile number to enter the app.\n  (Pattern: 09123456789)</string>
     <string name="txt_send_otp_desc">* Enter the sent OTP.</string>
@@ -46,9 +50,14 @@
     <string name="snackbar_background_location_negative_msg">You cannot use this app without set max level permission.</string>
     <string name="snackbar_notification_negative_msg">You cannot use this app without access post notification.</string>
     <string name="snackbar_short_click_msg">Please long click.</string>
-    <string name="snackbar_notification_dialog_msg">You need to grant notification permission to display app operations when you closing the app.</string>
-    <string name="snackbar_basic_location_dialog_msg">You need to grant location permission for the app to access your current location.</string>
-    <string name="snackbar_background_location_dialog_msg">To continue working with the program after closing it, you must set the location access to the highest level.\n\"Allow all the time\"</string>
+    <string name="snackbar_empty_target">Insert Your target username</string>
+    <string name="snackbar_not_selected_location_interval">Please select a sending interval</string>
+    <string name="snackbar_not_selected_targets">Please select your targets</string>
+
+    <string name="dialog_notification_dialog_msg">You need to grant notification permission to display app operations when you closing the app.</string>
+    <string name="dialog_basic_location_dialog_msg">You need to grant location permission for the app to access your current location.</string>
+    <string name="dialog_background_location_dialog_msg">To continue working with the program after closing it, you must set the location access to the highest level.\n\"Allow all the time\"</string>
+    <string name="dialog_remove_saved_target_msg">Are you sure to remove %1$s from the targets list.</string>
 
     <string name="img_content_description">Settings</string>
 
@@ -58,4 +67,6 @@
 
     <string name="start_observable_notification_msg">App is running in the background.</string>
     <string name="stop_observable_notification_msg">App is stopped from the background.</string>
+
+    <string name="location">location</string>
 </resources>
