--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,5 +99,9 @@
     <string name="observer_receive_data_msg">you are tracking %1$s !!!!</string>
     <string name="observer_disable_setting_msg">Disable When you are tracking.</string>
 
+    <string name="permission_extend_notification_msg1">%1$s want to track your location when it changes.\nAre you ok ?</string>
+    <string name="permission_extend_notification_msg2">%1$s want to track your location every %2$s minutes.\nAre you ok ?</string>
+    <string name="permission_collapse_notification_msg">Incoming Request permission from %1$s.</string>
+
     <string name="location">location</string>
 </resources>
