--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="snackbar_notification_negative_msg">You cannot use this app without access post notification.</string>
     <string name="snackbar_short_click_msg">Please long click.</string>
     <string name="snackbar_empty_target">Insert Your target username</string>
-    <string name="snackbar_not_selected_location_interval">Please select a sending interval</string>
+    <string name="snackbar_not_selected_location_mode_msg">Please select a location mode</string>
     <string name="snackbar_not_selected_targets">Please select your targets</string>
     <string name="snackbar_not_found_observer">The observer was not found</string>
     <string name="snackbar_empty_observer">Please fill the username</string>
@@ -106,10 +106,6 @@
     <string name="location_off_msg">App is paused !!!\nTurn on location …</string>
 
     <string name="location">location</string>
-    <string name="permission_extend_notification_msg">%1$s want to track your location every %2$s.\nAre you ok ?</string>
-    <string name="seconds">seconds</string>
-    <string name="minutes">minutes</string>
-    <string name="hours">hours</string>
-    <string name="day">day</string>
+    <string name="permission_extend_notification_msg">%1$s want to track your location every 5 seconds.\nAre you ok ?</string>
     <string name="one_target_limitation_msg">You can choose one target only.</string>
 </resources>
